objects/AOPS_DEPT_CCU001F__c.object
<CustomObject>
    <fields>
        <fullName>CCU001F_ADDITIONAL_INST__c</fullName>
        <defaultValue>&apos; &apos;</defaultValue>
        <label>CCU001F_ADDITIONAL_INST</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU001F_CUSTOMER_DEPT_KEY__c</fullName>
        <defaultValue>&apos; &apos;</defaultValue>
        <label>CCU001F_CUSTOMER_DEPT_KEY</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU001F_CUSTOMER_ID__c</fullName>
        <externalId>true</externalId>
        <label>CCU001F_CUSTOMER_ID</label>
        <length>8</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU001F_DEPARTMENT_DESC__c</fullName>
        <defaultValue>&apos; &apos;</defaultValue>
        <label>CCU001F_DEPARTMENT_DESC</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU001F_DEPARTMENT_DOLLAR_LMT__c</fullName>
        <defaultValue>0</defaultValue>
        <label>CCU001F_DEPARTMENT_DOLLAR_LMT</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CCU001F_DEPARTMENT_SEQ__c</fullName>
        <defaultValue>0</defaultValue>
        <label>CCU001F_DEPARTMENT_SEQ</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CCU001F_DEPT_DOLLAR_LMT_USED__c</fullName>
        <defaultValue>0</defaultValue>
        <label>CCU001F_DEPT_DOLLAR_LMT_USED</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CCU001F_EXP_DATE__c</fullName>
        <defaultValue>0</defaultValue>
        <label>CCU001F_EXP_DATE</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CCU001F_FAX_CONT_SEQ__c</fullName>
        <defaultValue>0</defaultValue>
        <label>CCU001F_FAX_CONT_SEQ</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CCU001F_ORDER_REST_IND__c</fullName>
        <defaultValue>&apos; &apos;</defaultValue>
        <label>CCU001F_ORDER_REST_IND</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU001F_PHONE_CONT_SEQ__c</fullName>
        <defaultValue>0</defaultValue>
        <label>CCU001F_PHONE_CONT_SEQ</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CCU001F_START_DATE__c</fullName>
        <defaultValue>0</defaultValue>
        <label>CCU001F_START_DATE</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CCU001F_THRESHOLD_DATE__c</fullName>
        <defaultValue>0</defaultValue>
        <label>CCU001F_THRESHOLD_DATE</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CCU001F_THRESHOLD__c</fullName>
        <defaultValue>0</defaultValue>
        <label>CCU001F_THRESHOLD</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CCU001F_TIME_STAMP__c</fullName>
        <defaultValue>0</defaultValue>
        <label>CCU001F_TIME_STAMP</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CCU001F_WATCHLIST_IND__c</fullName>
        <defaultValue>&apos; &apos;</defaultValue>
        <label>CCU001F_WATCHLIST_IND</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KEY__c</fullName>
        <externalId>true</externalId>
        <label>KEY</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Search_Field__c</fullName>
        <formula>CCU001F_CUSTOMER_DEPT_KEY__c</formula>
        <label>Search Field</label>
        <type>Text</type>
    </fields>
    <label>AOPS_DEPT_CCU001F</label>
    <nameField>
        <label>AOPS_DEPT_CCU001F Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AOPS_DEPT_CCU001F</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>